--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "jeroennoten/laravel-adminlte": "^3.8",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^3.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
